Cleaned up a bit. Moved auth things into routes/auth.js. Changed local port to 3000. Removed the google part of /auth/google(/callback)
